# hw_customcontroller

./: .gitignore  CMakeLists.txt  README.md  main.cpp  process.cpp  process.hpp
alogrithm/include/: predict.h
alogrithm/src/: predict.cpp
gpio/include/: gpio.hpp
gpio/src/: gpio.cpp
referee/include/: CRC8_CRC16.h  communicator.hpp  fifo.h  parse.h  protocol.h  referee.h  send_referee.h
referee/src/: CRC8_CRC16.c  communicator.cpp  fifo.cpp  parse.cpp  referee.c  send_referee.c
serial/: CMakeLists.txt
